infra/k8s-prod/ingress-svc.yaml
#load balancer configuration
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - intree.com.ar
        - www.intree.com.ar
      secretName: echo-tls
  rules:
    - host: intree.com.ar
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/files?(.*)
            backend:
              serviceName: files-srv
              servicePort: 3000
          - pathType: Prefix
            path: /(.*)
            backend:
              serviceName: files-srv
              servicePort: 3000
          - pathType: Prefix
            path: /api/v1/auth?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
    - host: www.intree.com.ar
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/files?(.*)
            backend:
              serviceName: files-srv
              servicePort: 3000
          - pathType: Prefix
            path: /(.*)
            backend:
              serviceName: files-srv
              servicePort: 3000
          - pathType: Prefix
            path: /api/v1/auth?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
